Fix void when cancel order with back button